src/objects/TATStage__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>TAT Stage</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ID__c</fullName>
        <label>ID</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>TAT_Stage_Description__c</fullName>
        <label>TAT Stage Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TAT_Stage_Long_Name__c</fullName>
        <label>TAT Stage Long Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TAT_Stage_Short_Name__c</fullName>
        <label>TAT Stage Short Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TAT_Stage__c</fullName>
        <label>TAT Stage</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>TAT Stage</label>
</CustomObject>